--- a/Catenária.ipynb
+++ b/Catenária.ipynb
@@ -14,6 +14,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-sa/3.0/br/\"><img alt=\"Licença Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-sa/3.0/br/88x31.png\" /></a><br />Este obra está licenciado com uma Licença <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-sa/3.0/br/\">Creative Commons Atribuição-CompartilhaIgual 3.0 Brasil</a>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"https://github.com/Magreenn/nbinteract-server/blob/main/Tecnicas/img/Logo-Poli_colorida_horizontal.png?raw=true\" width=700 />"
    ]
   },
@@ -22,7 +29,7 @@
    "metadata": {},
    "source": [
     "# Tecnicas de Programação <a class=\"tocSkip\"> </a>\n",
-    "## *Algorítimo dos Mínimos Quadrados*<a class=\"tocSkip\"> </a>\n",
+    "## *Catenária: Problema de Riser suspenso por um cabo*<a class=\"tocSkip\"> </a>\n",
     "\n",
     "###### João Pedro Nunes Cavalcante  DRE: 116082493\n",
     "###### André Vitor Bolanho Rocha de Oliveira DRE: 116180429 \n",
@@ -317,7 +324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3dcec1c34a7a4f7cb2a93929763b7e29",
+       "model_id": "d1e17c70f6ad4a9ea81963947c68fa58",
        "version_major": 2,
        "version_minor": 0
       },
