--- a/Método dos Mínimos Quadrados.ipynb
+++ b/Método dos Mínimos Quadrados.ipynb
@@ -14,6 +14,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a rel=\"license\" href=\"http://creativecommons.org/licenses/by-sa/3.0/br/\"><img alt=\"Licença Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-sa/3.0/br/88x31.png\" /></a><br />Este obra está licenciado com uma Licença <a rel=\"license\" href=\"http://creativecommons.org/licenses/by-sa/3.0/br/\">Creative Commons Atribuição-CompartilhaIgual 3.0 Brasil</a>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"https://github.com/Magreenn/nbinteract-server/blob/main/Tecnicas/img/Logo-Poli_colorida_horizontal.png?raw=true\" width=700 />"
    ]
   },
@@ -912,7 +919,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c7d90a926914ce4b5f7a530243834ac",
+       "model_id": "fc2582e3e0464f5b89d490b8b7bd89ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1013,7 +1020,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "114ce38d77d34bc4a092e0b89871904c",
+       "model_id": "cd7f8af355d149738d53883ac458620d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1063,7 +1070,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11e432f05da74dc49cca864ba3260b68",
+       "model_id": "854382608256462b8b21e9a2116f86bf",
        "version_major": 2,
        "version_minor": 0
       },
