Adicionado theta como argumento

--- a/Catenária.ipynb
+++ b/Catenária.ipynb
@@ -192,9 +192,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def catenaria(L, st, xa, ya, w, prec=1e-3):\n",
+    "def catenaria(L, st, xa, ya, w, theta, prec=1e-3):\n",
     "    theta_i = 1\n",
-    "    theta_f = 5\n",
+    "    theta_f = theta\n",
     "    fh_i = 1\n",
     "    xt_i = 200\n",
     "    while abs(theta_f-theta_i) > prec:\n",
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "fh, theta,_ = catenaria(L=2, xa=33, ya=20, w=400, st=46)\n",
+    "fh, theta,_ = catenaria(L=2, xa=33, ya=20, w=400, st=46, theta=5)\n",
     "print(f'A força horizontal é de {fh:.3f}N',\n",
     "      f'O ângulo teta é de {m.degrees(theta):.2f}°', sep=\"\\n\")"
    ]
@@ -260,9 +260,9 @@
    },
    "outputs": [],
    "source": [
-    "def plot(L, xa, ya, w, st):\n",
+    "def plot(L, xa, ya, w, st, theta):\n",
     "    # dados\n",
-    "    fh, theta , ft = catenaria(L, st, xa, ya, w)\n",
+    "    fh, theta, ft = catenaria(L, st, xa, ya, w , theta)\n",
     "    xt = xa-L*m.sin(theta)\n",
     "    yc = ya-L*m.cos(theta)\n",
     "    a = fh/w\n",
@@ -324,7 +324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1e17c70f6ad4a9ea81963947c68fa58",
+       "model_id": "2245f6008fbf4799ae76bb93e8457737",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,7 +347,8 @@
     "ya = FloatText(description='Profundidade (m):', value=20, style=style, layout = box_layout)\n",
     "w = FloatText(description='Peso Linear (N/m):', value=400, style=style, layout = box_layout)\n",
     "st = FloatText(description='Comprimento Riser (m):', value=46, style=style, layout = box_layout)\n",
-    "interactive(plot, L=L, xa=xa, ya=ya, w=w, st=st)"
+    "theta = FloatText(description='Ângulo Inicial (rad):', value=5, style=style, layout = box_layout)\n",
+    "interactive(plot, L=L, xa=xa, ya=ya, w=w, st=st, theta=theta)"
    ]
   },
   {
@@ -390,7 +391,7 @@
    "source": [
     "# dados\n",
     "l_s = np.linspace(1, 4)\n",
-    "ft_s = [catenaria(L=i, xa=33, ya=20, w=400, st=46)[2] for i in l_s]\n",
+    "ft_s = [catenaria(L=i, xa=33, ya=20, w=400, st=46, theta=5)[2] for i in l_s]\n",
     "ft_s = np.array(ft_s)\n",
     "# eixos\n",
     "plt.title(f\"Rigidez do Sistema\")\n",
@@ -406,6 +407,13 @@
     "plt.legend()\n",
     "print(f'A Rigidez do Sistema é {-E:.3f}N/m')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
