Adicionado precisão como argumento

--- a/Catenária.ipynb
+++ b/Catenária.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Índices<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Derivada-Central\" data-toc-modified-id=\"Derivada-Central-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Derivada Central</a></span></li><li><span><a href=\"#Algorítimo-de-Newton-Raphson\" data-toc-modified-id=\"Algorítimo-de-Newton-Raphson-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Algorítimo de Newton-Raphson</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exemplo-do-Slide\" data-toc-modified-id=\"Exemplo-do-Slide-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Exemplo do Slide</a></span></li></ul></li><li><span><a href=\"#Catenária\" data-toc-modified-id=\"Catenária-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Catenária</a></span></li><li><span><a href=\"#Gráfico\" data-toc-modified-id=\"Gráfico-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Gráfico</a></span></li><li><span><a href=\"#Exemplo\" data-toc-modified-id=\"Exemplo-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Exemplo</a></span></li><li><span><a href=\"#Rigidez-do-Sistema\" data-toc-modified-id=\"Rigidez-do-Sistema-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Rigidez do Sistema</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Derivada-Central\" data-toc-modified-id=\"Derivada-Central-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Derivada Central</a></span></li><li><span><a href=\"#Algorítimo-de-Newton-Raphson\" data-toc-modified-id=\"Algorítimo-de-Newton-Raphson-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Algorítimo de Newton-Raphson</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exemplo-do-Slide\" data-toc-modified-id=\"Exemplo-do-Slide-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Exemplo do Slide</a></span></li></ul></li><li><span><a href=\"#Catenária\" data-toc-modified-id=\"Catenária-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Catenária</a></span></li><li><span><a href=\"#Gráfico\" data-toc-modified-id=\"Gráfico-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Gráfico</a></span></li><li><span><a href=\"#Exemplo\" data-toc-modified-id=\"Exemplo-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Exemplo</a></span></li><li><span><a href=\"#Rigidez-do-Sistema\" data-toc-modified-id=\"Rigidez-do-Sistema-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Rigidez do Sistema</a></span></li><li><span><a href=\"#Catenaria:-Monte-Carlo\" data-toc-modified-id=\"Catenaria:-Monte-Carlo-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Catenaria: Monte Carlo</a></span></li></ul></div>"
    ]
   },
   {
@@ -260,9 +260,9 @@
    },
    "outputs": [],
    "source": [
-    "def plot(L, xa, ya, w, st, theta):\n",
+    "def plot(L, xa, ya, w, st, theta, prec):\n",
     "    # dados\n",
-    "    fh, theta, ft = catenaria(L, st, xa, ya, w , theta)\n",
+    "    fh, theta, ft = catenaria(L, st, xa, ya, w, theta, prec)\n",
     "    xt = xa-L*m.sin(theta)\n",
     "    yc = ya-L*m.cos(theta)\n",
     "    a = fh/w\n",
@@ -295,8 +295,8 @@
     "    plt.plot(eixo_cabo, cabo, label=\"Cabo de sustentação\")\n",
     "    #eixos\n",
     "    plt.title(f\"Geometria do Problema\")\n",
-    "    plt.xlabel(\"Eixo X\")\n",
-    "    plt.ylabel(\"Eixo Y\")\n",
+    "    plt.xlabel(\"Eixo X (m)\")\n",
+    "    plt.ylabel(\"Eixo Y (m)\")\n",
     "    plt.legend();"
    ]
   },
@@ -324,7 +324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2245f6008fbf4799ae76bb93e8457737",
+       "model_id": "d2db9b26dcbf4474a6468bae47d57315",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,7 +348,8 @@
     "w = FloatText(description='Peso Linear (N/m):', value=400, style=style, layout = box_layout)\n",
     "st = FloatText(description='Comprimento Riser (m):', value=46, style=style, layout = box_layout)\n",
     "theta = FloatText(description='Ângulo Inicial (rad):', value=5, style=style, layout = box_layout)\n",
-    "interactive(plot, L=L, xa=xa, ya=ya, w=w, st=st, theta=theta)"
+    "prec = FloatText(description='Precisão:', value=1e-3, style=style, layout = box_layout)\n",
+    "interactive(plot, L=L, xa=xa, ya=ya, w=w, st=st, theta=theta, prec=prec)"
    ]
   },
   {
@@ -409,11 +410,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Catenaria: Monte Carlo"
+   ]
   }
  ],
  "metadata": {
@@ -438,16 +446,16 @@
    "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
-   "sideBar": true,
+   "sideBar": false,
    "skip_h1_title": true,
    "title_cell": "Índices",
    "title_sidebar": "Contents",
    "toc_cell": true,
    "toc_position": {
-    "height": "47.429px",
-    "left": "1148.11px",
-    "top": "52.5142px",
-    "width": "211.989px"
+    "height": "47.4219px",
+    "left": "1228.02px",
+    "top": "53px",
+    "width": "211.984px"
    },
    "toc_section_display": true,
    "toc_window_display": true
