restart and run all jupyter (no changes)

--- a/Método dos Mínimos Quadrados.ipynb
+++ b/Método dos Mínimos Quadrados.ipynb
@@ -919,7 +919,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc2582e3e0464f5b89d490b8b7bd89ba",
+       "model_id": "abf6fb61bed741f0a8b218ef3ec9fb46",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1020,7 +1020,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd7f8af355d149738d53883ac458620d",
+       "model_id": "033ce320877c493cb75e5e1d32e1e999",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1070,7 +1070,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "854382608256462b8b21e9a2116f86bf",
+       "model_id": "06f02e57f5c746aba46af5987809c657",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1134,6 +1134,15 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err_x = np.random.uniform()"
    ]
   }
  ],
