Monte Carlo Funcionando

--- a/Catenária.ipynb
+++ b/Catenária.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Índices<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Derivada-Central\" data-toc-modified-id=\"Derivada-Central-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Derivada Central</a></span></li><li><span><a href=\"#Algorítimo-de-Newton-Raphson\" data-toc-modified-id=\"Algorítimo-de-Newton-Raphson-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Algorítimo de Newton-Raphson</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exemplo-do-Slide\" data-toc-modified-id=\"Exemplo-do-Slide-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Exemplo do Slide</a></span></li></ul></li><li><span><a href=\"#Catenária\" data-toc-modified-id=\"Catenária-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Catenária</a></span></li><li><span><a href=\"#Gráfico\" data-toc-modified-id=\"Gráfico-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Gráfico</a></span></li><li><span><a href=\"#Exemplo\" data-toc-modified-id=\"Exemplo-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Exemplo</a></span></li><li><span><a href=\"#Rigidez-do-Sistema\" data-toc-modified-id=\"Rigidez-do-Sistema-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Rigidez do Sistema</a></span></li><li><span><a href=\"#Catenaria:-Monte-Carlo\" data-toc-modified-id=\"Catenaria:-Monte-Carlo-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Catenaria: Monte Carlo</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Derivada-Central\" data-toc-modified-id=\"Derivada-Central-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Derivada Central</a></span></li><li><span><a href=\"#Algorítimo-de-Newton-Raphson\" data-toc-modified-id=\"Algorítimo-de-Newton-Raphson-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Algorítimo de Newton-Raphson</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exemplo-do-Slide\" data-toc-modified-id=\"Exemplo-do-Slide-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Exemplo do Slide</a></span></li></ul></li><li><span><a href=\"#Catenária\" data-toc-modified-id=\"Catenária-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Catenária</a></span></li><li><span><a href=\"#Gráfico\" data-toc-modified-id=\"Gráfico-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Gráfico</a></span></li><li><span><a href=\"#Exemplo-1\" data-toc-modified-id=\"Exemplo-1-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Exemplo 1</a></span></li><li><span><a href=\"#Rigidez-do-Sistema\" data-toc-modified-id=\"Rigidez-do-Sistema-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Rigidez do Sistema</a></span></li><li><span><a href=\"#Monte-Carlo\" data-toc-modified-id=\"Monte-Carlo-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Monte Carlo</a></span></li><li><span><a href=\"#Catenaria:-Monte-Carlo\" data-toc-modified-id=\"Catenaria:-Monte-Carlo-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Catenaria: Monte Carlo</a></span></li><li><span><a href=\"#Exemplo-2\" data-toc-modified-id=\"Exemplo-2-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>Exemplo 2</a></span></li></ul></div>"
    ]
   },
   {
@@ -246,9 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Gráfico"
    ]
@@ -257,56 +255,55 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "def plot(L, xa, ya, w, st, theta, prec):\n",
-    "    # dados\n",
-    "    fh, theta, ft = catenaria(L, st, xa, ya, w, theta, prec)\n",
-    "    xt = xa-L*np.sin(theta)\n",
-    "    yc = ya-L*np.cos(theta)\n",
-    "    a = fh/w\n",
-    "    xc = a*np.arccosh((yc+a)/a)\n",
-    "    s = a*np.sinh(xc/a)\n",
-    "    if (xt-xc)>0:\n",
-    "        xh = xt-xc\n",
-    "    else:\n",
-    "        xh=0\n",
-    "    # resposta dos cálculos\n",
-    "    print(f'A força horizontal é de {fh:.2f}N',\n",
-    "          f'O ângulo teta é de {np.degrees(theta):.2f}°',\n",
-    "          f'a = {a:.2f}',\n",
-    "          f'xh = {xh:.2f}m',\n",
-    "          f'xc = {xc:.2f}m',\n",
-    "          f'xt = {xt:.2f}m',\n",
-    "          f'yc = {yc:.2f}m',\n",
-    "          f's = {s:.2f}m',\n",
-    "          f'ft = {ft:.2f}N',sep=\"\\n\")\n",
-    "    # plot do riser no solo\n",
-    "    eixo_solo = np.linspace(0, xh)\n",
-    "    plt.plot(eixo_solo, np.zeros(np.shape(eixo_solo)), label=\"Riser no solo marinho\")\n",
-    "    # plot do riser em catenária\n",
-    "    eixo = np.linspace(xh, xt)\n",
-    "    ys = a*(np.cosh((eixo-xh)/a)-1)\n",
-    "    plt.plot(eixo, ys, label=\"Riser em catenária\")\n",
-    "    # plot do cabo\n",
-    "    eixo_cabo = np.linspace(xt, xa)\n",
-    "    cabo = (1/np.tan(theta))*(eixo_cabo-xt)+yc\n",
-    "    plt.plot(eixo_cabo, cabo, label=\"Cabo de sustentação\")\n",
-    "    #eixos\n",
-    "    plt.title(f\"Geometria do Problema\")\n",
-    "    plt.xlabel(\"Eixo X (m)\")\n",
-    "    plt.ylabel(\"Eixo Y (m)\")\n",
-    "    plt.legend();"
+    "def plot(func):\n",
+    "    def do(L, xa, ya, w, st, theta, prec):\n",
+    "        # dados\n",
+    "        fh, theta, ft = func(L, st, xa, ya, w, theta, prec)\n",
+    "        xt = xa-L*np.sin(theta)\n",
+    "        yc = ya-L*np.cos(theta)\n",
+    "        a = fh/w\n",
+    "        xc = a*np.arccosh((yc+a)/a)\n",
+    "        s = a*np.sinh(xc/a)\n",
+    "        if (xt-xc)>0:\n",
+    "            xh = xt-xc\n",
+    "        else:\n",
+    "            xh=0\n",
+    "        # resposta dos cálculos\n",
+    "        print(f'A força horizontal é de {fh:.2f}N',\n",
+    "              f'O ângulo teta é de {np.degrees(theta):.2f}°',\n",
+    "              f'a = {a:.2f}',\n",
+    "              f'xh = {xh:.2f}m',\n",
+    "              f'xc = {xc:.2f}m',\n",
+    "              f'xt = {xt:.2f}m',\n",
+    "              f'yc = {yc:.2f}m',\n",
+    "              f's = {s:.2f}m',\n",
+    "              f'ft = {ft:.2f}N',sep=\"\\n\")\n",
+    "        # plot do riser no solo\n",
+    "        eixo_solo = np.linspace(0, xh)\n",
+    "        plt.plot(eixo_solo, np.zeros(np.shape(eixo_solo)), label=\"Riser no solo marinho\")\n",
+    "        # plot do riser em catenária\n",
+    "        eixo = np.linspace(xh, xt)\n",
+    "        ys = a*(np.cosh((eixo-xh)/a)-1)\n",
+    "        plt.plot(eixo, ys, label=\"Riser em catenária\")\n",
+    "        # plot do cabo\n",
+    "        eixo_cabo = np.linspace(xt, xa)\n",
+    "        cabo = (1/np.tan(theta))*(eixo_cabo-xt)+yc\n",
+    "        plt.plot(eixo_cabo, cabo, label=\"Cabo de sustentação\")\n",
+    "        #eixos\n",
+    "        plt.title(f\"Geometria do Problema\")\n",
+    "        plt.xlabel(\"Eixo X (m)\")\n",
+    "        plt.ylabel(\"Eixo Y (m)\")\n",
+    "        plt.legend();\n",
+    "    return do"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "---"
    ]
@@ -315,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exemplo"
+    "## Exemplo 1"
    ]
   },
   {
@@ -328,7 +325,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35203316263743d0979ed7539a3a183c",
+       "model_id": "420d9857f4ce42a1b376a51aee541b07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,7 +350,7 @@
     "st = FloatText(description='Comprimento Riser (m):', value=46, style=style, layout = box_layout)\n",
     "theta = FloatText(description='Ângulo Inicial (rad):', value=5, style=style, layout = box_layout)\n",
     "prec = FloatText(description='Precisão:', value=1e-3, style=style, layout = box_layout)\n",
-    "interactive(plot, L=L, xa=xa, ya=ya, w=w, st=st, theta=theta, prec=prec)"
+    "interactive(plot(catenaria), L=L, xa=xa, ya=ya, w=w, st=st, theta=theta, prec=prec)"
    ]
   },
   {
@@ -424,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Catenaria: Monte Carlo"
+    "## Monte Carlo"
    ]
   },
   {
@@ -434,21 +431,21 @@
    "outputs": [],
    "source": [
     "def monte_carlo(f, Y, a, b, N=1000, prec=1e-6):\n",
-    "    #pega pontos aleatorios entre a e b e depois ordena eles\n",
     "    x = np.sort(np.random.uniform(a,b,size=N))\n",
-    "    #subtrai o valor dos pontos do ponto Y desejado\n",
     "    lista = f(x)-Y\n",
-    "    #se um desses valores for suficientemente próximo de Y retornar esse valor\n",
     "    for i,y in enumerate(lista):\n",
     "        if abs(y)<prec:\n",
     "            return x[i]\n",
-    "    #se não refazendo o metodo agora com a,b sendo os valores mais próximos de Y que ainda contem Y dentro de seu intervalo.\n",
-    "    a1 = [x[i] for i,y in enumerate(lista) if y<0][-1]\n",
-    "    b1 = [x[i] for i,y in enumerate(lista) if y>=0][0]\n",
-    "    #print só pra saber que merda ta acontecendo\n",
-    "    print(f'a ={a}')\n",
-    "    print(f'b ={b}')\n",
-    "    return monte_carlo(f=f, Y=Y, a=a1, b=b1, N=1000, prec=1e-6)"
+    "    a = [x[i] for i,y in enumerate(lista) if y<0][-1]\n",
+    "    b = [x[i] for i,y in enumerate(lista) if y>=0][0]\n",
+    "    return monte_carlo(f, Y, a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Catenaria: Monte Carlo"
    ]
   },
   {
@@ -478,8 +475,15 @@
     "            # trocando xt\n",
     "            xt_i = xh+xc\n",
     "            G = lambda fh: (xh + ((fh/w)*np.arccosh((yc_i*w+fh)/fh)))\n",
-    "            fh_i = monte_carlo(f=G, Y=xt_2, a=0, b=2000, N=1000, prec=1e-6) \n",
+    "            fh_i = monte_carlo(f=G, Y=xt_2, a=0, b=5000, N=10000, prec=1e-6) \n",
     "    return fh_i, theta_f , ft"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplo 2"
    ]
   },
   {
@@ -488,42 +492,34 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A força horizontal é de 1048.426N\n",
-      "O ângulo teta é de 7.30°\n",
-      "a =0\n",
-      "b =2000\n",
-      "a =1254.5963323514843\n",
-      "b =1258.059808221633\n",
-      "a =0\n",
-      "b =2000\n",
-      "a =1978.6614619023935\n",
-      "b =1982.4662550210437\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-cb9911495248>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m print(f'A força horizontal é de {fh1:.3f}N',\n\u001b[0;32m      3\u001b[0m       f'O ângulo teta é de {np.degrees(theta1):.2f}°', sep=\"\\n\")\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mfh2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtheta2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcatenaria_mc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mL\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxa\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m33\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mya\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m400\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mst\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m46\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtheta\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m print(f'A força horizontal é de {fh2:.3f}N',\n\u001b[0;32m      6\u001b[0m       f'O ângulo teta é de {np.degrees(theta2):.2f}°', sep=\"\\n\")\n",
-      "\u001b[1;32m<ipython-input-12-484db882ecdf>\u001b[0m in \u001b[0;36mcatenaria_mc\u001b[1;34m(L, st, xa, ya, w, theta, prec)\u001b[0m\n\u001b[0;32m     20\u001b[0m             \u001b[0mxt_i\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxh\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mxc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m             \u001b[0mG\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0mfh\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mxh\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marccosh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myc_i\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mfh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m             \u001b[0mfh_i\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmonte_carlo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mG\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mxt_2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprec\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1e-6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mfh_i\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtheta_f\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mft\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-11-9c909fb83e27>\u001b[0m in \u001b[0;36mmonte_carlo\u001b[1;34m(f, Y, a, b, N, prec)\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;31m#se não refazendo o metodo agora com a,b sendo os valores mais próximos de Y que ainda contem Y dentro de seu intervalo.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0ma1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m<\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mb1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m>=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[1;31m#print só pra saber que merda ta acontecendo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'a ={a}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c0f7ff3ba46d49baaa6a4c0fd8df3acd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatText(value=2.0, description='Comprimento do Cabo (m):', layout=Layout(align_items='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "fh1, theta1,_ = catenaria(L=2, xa=33, ya=20, w=400, st=46, theta=5)\n",
-    "print(f'A força horizontal é de {fh1:.3f}N',\n",
-    "      f'O ângulo teta é de {np.degrees(theta1):.2f}°', sep=\"\\n\")\n",
-    "fh2, theta2,_ = catenaria_mc(L=2, xa=33, ya=20, w=400, st=46, theta=5)\n",
-    "print(f'A força horizontal é de {fh2:.3f}N',\n",
-    "      f'O ângulo teta é de {np.degrees(theta2):.2f}°', sep=\"\\n\")"
+    "style = {'description_width': 'initial'}\n",
+    "box_layout = Layout(display='flex',\n",
+    "                    flex_flow='row',\n",
+    "                    align_items='stretch',\n",
+    "                    width='30%')\n",
+    "L = FloatText(description='Comprimento do Cabo (m):', value=2, style=style, layout = box_layout)\n",
+    "xa = FloatText(description='Distância Horizontal (m):', value=33, style=style, layout = box_layout)\n",
+    "ya = FloatText(description='Profundidade (m):', value=20, style=style, layout = box_layout)\n",
+    "w = FloatText(description='Peso Linear (N/m):', value=400, style=style, layout = box_layout)\n",
+    "st = FloatText(description='Comprimento Riser (m):', value=46, style=style, layout = box_layout)\n",
+    "theta = FloatText(description='Ângulo Inicial (rad):', value=5, style=style, layout = box_layout)\n",
+    "prec = FloatText(description='Precisão:', value=1e-3, style=style, layout = box_layout)\n",
+    "interactive(plot(catenaria_mc), L=L, xa=xa, ya=ya, w=w, st=st, theta=theta, prec=prec)"
    ]
   }
  ],
@@ -584,11 +580,11 @@
     }
    },
    "position": {
-    "height": "608px",
-    "left": "1183px",
+    "height": "686.753px",
+    "left": "833.955px",
     "right": "20px",
-    "top": "120px",
-    "width": "237px"
+    "top": "35.934px",
+    "width": "585.521px"
    },
    "types_to_exclude": [
     "module",
