Monte Carlo incompleto

--- a/Catenária.ipynb
+++ b/Catenária.ipynb
@@ -325,7 +325,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "420d9857f4ce42a1b376a51aee541b07",
+       "model_id": "d85628f14bfc4bd9ade0b01237693e72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -480,6 +480,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def catenaria_mc2(L, st, xa, ya, w, theta_a, theta_b, fh_a, fh_b, N, prec=1e-3):\n",
+    "    fh = np.random.uniform(np.radians(theta_a), np.radians(theta_b), size=N)\n",
+    "    theta_1 = np.random.uniform(fh_a, fh_b, size=N)\n",
+    "    yc = ya-L*np.cos(theta_1)\n",
+    "    xt_1 = xa-L*np.sin(theta_1)\n",
+    "    a = fh/w\n",
+    "    xc = a*np.arccosh((yc+a)/a)\n",
+    "    s = a*np.sinh(xc/a)\n",
+    "    fv = w*s\n",
+    "    ft = np.sqrt(fh**2 + fv**2)\n",
+    "    xh = st-s\n",
+    "    theta_2 = np.arctan(fh/fv)\n",
+    "    xt_2 = xh+xc\n",
+    "    err = np.abs(0.5*(theta_1-theta_2)/theta_1 + 0.5*(xt_1-xt_2)/xt_1)\n",
+    "    if err<prec for i,err in enumerate(err):\n",
+    "        return fh_1[i], theta_1[i], ft[i]\n",
+    "    else:\n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -494,7 +520,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0f7ff3ba46d49baaa6a4c0fd8df3acd",
+       "model_id": "be828d0dce934bbbae2ad06d20a343f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -552,9 +578,9 @@
    "toc_cell": true,
    "toc_position": {
     "height": "47.4219px",
-    "left": "1228.02px",
-    "top": "53px",
-    "width": "211.984px"
+    "left": "1155.02px",
+    "top": "52px",
+    "width": "211.969px"
    },
    "toc_section_display": true,
    "toc_window_display": true
