--- a/Catenária.ipynb
+++ b/Catenária.ipynb
@@ -81,7 +81,17 @@
    "outputs": [],
    "source": [
     "def df(f, x, h):\n",
-    "    \"\"\"Calcula uma aproximação da primeira derivada de f, nos pontos do vetor x, usando passos de tamanho h.\"\"\"\n",
+    "    \"\"\"Derivada Central:\n",
+    "    Calcula uma aproximação da primeira derivada de f, nos pontos x, usando passos de tamanho h.\n",
+    "    :param f: Função\n",
+    "    :type f: func\n",
+    "    :param x: Pontos\n",
+    "    :type x: float, int or array\n",
+    "    :param h: Passo\n",
+    "    :type h: float\n",
+    "    :return: Derivada de f no ponto x\n",
+    "    :rtype: float or array\n",
+    "    \"\"\"\n",
     "    return (f(x+h) - f(x-h))/(2*h)"
    ]
   },
@@ -106,12 +116,21 @@
    "outputs": [],
    "source": [
     "def newton(f, x0, Y=0, prec_x=1e-6, prec_y=1e-6, maxsteps=100):\n",
-    "    \"\"\"Método de Newton para encontrar o zero de f.\n",
-    "\n",
-    "    Retorna uma lista dos pontos considerados, exceto o ponto inicial.\n",
-    "\n",
-    "    `df' é uma função que retorna a derivada de f, e `x0' é o valor\n",
-    "    inicial da iteração.\"\"\"\n",
+    "    \"\"\"Algorítimo de Newton-Raphson:\n",
+    "    Calcula o ponto x0 tal que f(x0)=Y\n",
+    "    :param f: Função\n",
+    "    :type f: func\n",
+    "    :param x0: Ponto de Partida\n",
+    "    :type x0: float, int\n",
+    "    :param Y: Valor desejado da função, defaults to 0 (Raíz)\n",
+    "    :type Y: float, int\n",
+    "    :param prec_x, prec_y: Precisão nos valores de x e y, defaults to 1e-6\n",
+    "    :type prec_x, prec_y: float\n",
+    "    :param maxsteps: Número Máximo de Iteraçãoes, defaults to 100\n",
+    "    :type maxsteps: int\n",
+    "    :return: Lista dos valores de x calculados\n",
+    "    :rtype: list\n",
+    "    \"\"\"\n",
     "    x_list = []\n",
     "    for i in range(maxsteps):\n",
     "        passo = (f(x0)-Y)/df(f, x0, prec_x)\n",
@@ -192,10 +211,30 @@
    "outputs": [],
    "source": [
     "def catenaria(L, st, xa, ya, w, theta, prec=1e-3):\n",
+    "    \"\"\"Catenária com rotina de Newton-Raphson:\n",
+    "    Soluciona o problema de Riser apoiado por cabo\n",
+    "    :param L: Comprimento do Cabo de apoio (m)\n",
+    "    :type L: float, int\n",
+    "    :param st: Comprimento Total do Riser (m)\n",
+    "    :type st: float, int\n",
+    "    :param xa, ya: Distância entre os apoios (m)\n",
+    "    :type xa, ya: float, int\n",
+    "    :param w: Peso por unidade de comprimento (N/m)\n",
+    "    :type w: float, int\n",
+    "    :param theta: Chute inicial do ângulo entre a resultante e a vertical (°)\n",
+    "    :type theta: float, int\n",
+    "    :param prec: Precisão do Resultado, defaults to 1e-3\n",
+    "    :type prec: float\n",
+    "    :return: Força Horizontal no apoio(N); Ângulo entre a resultante e a vertical(rad); Força Total no apoio(N)\n",
+    "    :rtype: float\n",
+    "    \"\"\"\n",
+    "    #chutes iniciais de theta e fh\n",
     "    theta_i = 1\n",
     "    theta_f = theta\n",
     "    fh_i = 1\n",
+    "    #definindo xt_i somente para passar no primeiro while\n",
     "    xt_i = 200\n",
+    "    #\n",
     "    while abs(theta_f-theta_i) > prec:\n",
     "        theta_i = theta_f\n",
     "        yc_i = ya-L*np.cos(theta_i)\n",
@@ -207,7 +246,7 @@
     "            fv = w*s\n",
     "            ft = np.sqrt(fh_i**2 + fv**2)\n",
     "            xh = st-s\n",
-    "            # trocando tetha\n",
+    "            # trocando theta\n",
     "            theta_f = np.arctan(fh_i/fv)\n",
     "            # trocando xt\n",
     "            xt_i = xh+xc\n",
@@ -260,7 +299,29 @@
    "outputs": [],
    "source": [
     "def plot(func):\n",
-    "    def do(L, xa, ya, w, st, theta, prec):\n",
+    "    \"\"\"Função de Geração de Gráfico:\n",
+    "    Calcula a geometria do problema de catenária apoiada por cabo e plota o gráfico\n",
+    "    :param func: Função de resolução do problema de catenária\n",
+    "    :type f: func\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
+    "    def do(L, st, xa, ya, w, theta, prec):\n",
+    "        \"\"\"Função de Geração de Gráfico:\n",
+    "        Calcula a geometria do problema de catenária apoiada por cabo e plota o gráfico\n",
+    "        :param L: Comprimento do Cabo de apoio (m)\n",
+    "        :type L: float, int\n",
+    "        :param st: Comprimento Total do Riser (m)\n",
+    "        :type st: float, int\n",
+    "        :param xa, ya: Distância entre os apoios (m)\n",
+    "        :type xa, ya: float, int\n",
+    "        :param w: Peso por unidade de comprimento (N/m)\n",
+    "        :type w: float, int\n",
+    "        :param theta: Chute inicial do ângulo entre a resultante e a vertical (°)\n",
+    "        :type theta: float, int\n",
+    "        :param prec: Precisão do Resultado, defaults to 1e-3\n",
+    "        :type prec: float\n",
+    "        :return: None\n",
+    "        \"\"\"\n",
     "        # dados\n",
     "        fh, theta, ft = func(L, st, xa, ya, w, theta, prec)\n",
     "        xt = xa-L*np.sin(theta)\n",
@@ -293,7 +354,7 @@
     "        eixo_cabo = np.linspace(xt, xa)\n",
     "        cabo = (1/np.tan(theta))*(eixo_cabo-xt)+yc\n",
     "        plt.plot(eixo_cabo, cabo, label=\"Cabo de sustentação\")\n",
-    "        #eiXos\n",
+    "        #eixos\n",
     "        plt.title(f\"Geometria do Problema\")\n",
     "        plt.xlabel(\"Eixo X (m)\")\n",
     "        plt.ylabel(\"Eixo Y (m)\")\n",
@@ -325,7 +386,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75abe87c96c3410494c31229bc406e78",
+       "model_id": "6b5eab9341784c7d8c4fb9084b8392f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -431,13 +492,34 @@
    "outputs": [],
    "source": [
     "def monte_carlo(f, Y, a, b, N=1000, prec=1e-6):\n",
+    "    \"\"\"Monte Carlo:\n",
+    "    Essa função cria uma lista com pontos aleatórios seguindo uma distribuição uniforme dentro de um intervalo [a,b[. Em seguiga os pontos\n",
+    "    são ordenados.Para um valor de f(x), é subtraído um valor de Y dado e é testado em qual ponto da função o valor da diferença fica mais\n",
+    "    próximo do zero pela precisão adotada. Ao encontrar esse valor, ele substitui, respectivamente o valor do intervalo de [a,b[ pelo valor\n",
+    "    imediatamente inferior e superior na lista\n",
+    "    :param f: Função\n",
+    "    :type f: func\n",
+    "    :param Y: Ponto\n",
+    "    :type Y: float, int\n",
+    "    :param a: Valor inferior do intervalo aberto [a,b[ da distribuição de pontos aleatórios\n",
+    "    :type a: float, int\n",
+    "    :param b: Valor superior do intervalo aberto [a,b[ da distribuição de pontos aleatórios\n",
+    "    :type b: float, int\n",
+    "    :param N: Número de amostras, defaults to 10.000\n",
+    "    :type N: int\n",
+    "    :param prec: Precisão esperada para convergir o resultado defaults to  1e-6\n",
+    "    :type N: int\n",
+    "    :type prec: float\n",
+    "    :return: Valor de X esperado mais próximo do Y dado.\n",
+    "    :rtype: float\n",
+    "    \"\"\"\n",
     "    x = np.sort(np.random.uniform(a,b,size=N))\n",
     "    lista = f(x)-Y\n",
     "    for i,y in enumerate(lista):\n",
     "        if abs(y)<prec:\n",
     "            return x[i]\n",
     "    a = [x[i] for i,y in enumerate(lista) if y<0][-1]\n",
-    "    b = [x[i] for i,y in enumerate(lista) if y>=0][0]\n",
+    "    b = [x[i] for i,y in enumerate(lista) if y>0][0]\n",
     "    return monte_carlo(f, Y, a, b)"
    ]
   },
@@ -455,6 +537,24 @@
    "outputs": [],
    "source": [
     "def catenaria_mc(L, st, xa, ya, w, theta, prec=1e-3):\n",
+    "    \"\"\"Catenária com rotina de Monte Carlo:\n",
+    "    Soluciona o problema do Riser apoiado no cabo, para N amostras aleatórias da força horizontal. \n",
+    "    Nesse primeiro problema ainda não é inserido o ângulo do cabo de maneira aleatória \n",
+    "    :param L: Comprimento do Cabo de apoio (m)\n",
+    "    :type L: float, int\n",
+    "    :param st: Comprimento total do riser (m)\n",
+    "    :type st: float, int\n",
+    "    :param xa, ya: Distância entre os apoios (m)\n",
+    "    :type xa, ya: float, int\n",
+    "    :param w: Peso por unidade de comprimento (N/m)\n",
+    "    :type w: float, int\n",
+    "    :param theta: Chute inicial do ângulo entre a resultante e a vertical (°)\n",
+    "    :type theta: float, int\n",
+    "    :param prec: Precisão do Resultado,  defaults to 1e-3\n",
+    "    :type prec: float\n",
+    "    :return: Força Horizontal no apoio (N); Ângulo entre a resultante e a vertical(rad); Força Total no apoio(N).\n",
+    "    :rtype: float\n",
+    "    \"\"\"\n",
     "    theta_i = 1\n",
     "    theta_f = theta\n",
     "    fh_i = 1\n",
@@ -475,7 +575,7 @@
     "            # trocando xt\n",
     "            xt_i = xh+xc\n",
     "            G = lambda fh: (xh + ((fh/w)*np.arccosh((yc_i*w+fh)/fh)))\n",
-    "            fh_i = monte_carlo(f=G, Y=xt_2, a=0, b=5000, N=10000, prec=1e-6) \n",
+    "            fh_i = monte_carlo(f=G, Y=xt_2, a=0, b=8000, N=10000, prec=1e-6) \n",
     "    return fh_i, theta_f , ft"
    ]
   },
@@ -516,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ac92660d365410bacdbcc1d52bccf0b",
+       "model_id": "432b038fdf464bbf852296bff4c629f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -557,11 +657,41 @@
    },
    "outputs": [],
    "source": [
-    "def catenaria_genetico(L, st, xa, ya, w, theta_a, theta_b, fh_a, fh_b, N, prec=1e-4, loop=True):\n",
-    "    theta_a = np.radians(theta_a)\n",
-    "    theta_b = np.radians(theta_b)\n",
+    "def catenaria_genetico(L, st, xa, ya, w, theta_a, theta_b, fh_a, fh_b, N, prec=1e-4):\n",
+    "    \"\"\"Catenária com rotina de Monte Carlo/Genético:\n",
+    "    Soluciona o problema do Riser apoiado no cabo, para N amostras aleatórias da força horizontal e do ângulo Theta.\n",
+    "    :param L: Comprimento do Cabo de apoio (m)\n",
+    "    :type L: float, int\n",
+    "    :param st: Comprimento total do riser (m)\n",
+    "    :type st: float, int\n",
+    "    :param xa, ya: Distância entre os apoios (m)\n",
+    "    :type xa, ya: float, int\n",
+    "    :param w: Peso por unidade de comprimento (N/m)\n",
+    "    :type w: float, int\n",
+    "    :param theta_a: Valor inferior para intervalo do ângulo entre a resultante e a vertical (°)\n",
+    "    :type theta_a: float, int\n",
+    "    :param theta_b:Valor superior para intervalo do ângulo entre a resultante e a vertical (°)\n",
+    "    :type theta_b: float, int\n",
+    "    :param fh_a: Valor inferior para intervalo da força horizontal no apoio (N)\n",
+    "    :type fh_a: float, int\n",
+    "    :param fh_b: Valor superior para intervalo da força horizontal no apoio (N)\n",
+    "    :type fh_b: float, int\n",
+    "    :param N: Número de amostras a serem geradas\n",
+    "    :type N: int \n",
+    "    :param prec: Precisão do Resultado,  defaults to 1e-4\n",
+    "    :type prec: float\n",
+    "    :return: Força Horizontal no apoio (N); Ângulo entre a resultante e a vertical(rad); Força Total no apoio(N).\n",
+    "    :rtype: float\n",
+    "    \"\"\"\n",
+    "    loop = True\n",
+    "    theta_a1, theta_b1 = np.radians(theta_a), np.radians(theta_b)\n",
+    "    theta_a2, theta_b2 = theta_a1, theta_b1\n",
+    "    fh_a1, fh_b1 = fh_a, fh_b\n",
+    "    fh_a2, fh_b2 = fh_a, fh_b\n",
     "    while loop == True:\n",
-    "        points = np.random.uniform(low = [fh_a, theta_a] , high=[fh_b, theta_b], size=[N,2])\n",
+    "        points_10 = np.random.uniform(low = [fh_a1, theta_a1] , high=[fh_b1, theta_b1], size=[int(N*0.1),2])\n",
+    "        points_90 = np.random.uniform(low = [fh_a2, theta_a2] , high=[fh_b2, theta_b2], size=[int(N*0.9),2])\n",
+    "        points = np.vstack((points_10,points_90))\n",
     "        ind = np.argsort(points,axis=0)[:,0]\n",
     "        arrumado = np.array([[points[i,j] for j in range(len(points[i]))] for i in ind])\n",
     "        theta_1 = arrumado[:,1]\n",
@@ -585,10 +715,12 @@
     "            if err <= prec:\n",
     "                return fh_1[i], theta_1[i], ft[i]\n",
     "            else:\n",
-    "                theta_a = lista_T.min(axis=0)[0]\n",
-    "                theta_b = lista_T.max(axis=0)[0]\n",
-    "                fh_a = lista_F.min(axis=0)[0]\n",
-    "                fh_b = lista_F.max(axis=0)[0]\n",
+    "                theta_a1, theta_b1 = theta_a2, theta_b2\n",
+    "                fh_a1, fh_a1 = fh_a2, fh_b2\n",
+    "                theta_a2 = lista_T.min(axis=0)[0]\n",
+    "                theta_b2 = lista_T.max(axis=0)[0]\n",
+    "                fh_a2 = lista_F.min(axis=0)[0]\n",
+    "                fh_b2 = lista_F.max(axis=0)[0]\n",
     "                prec2 = prec2*1e-1"
    ]
   },
@@ -601,7 +733,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A força horizontal é de 1047.423N\n",
+      "A força horizontal é de 1048.084N\n",
       "O ângulo teta é de 7.29°\n"
      ]
     }
@@ -625,10 +757,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot(func):\n",
+    "def plot2(func):\n",
+    "    \"\"\"Função de Geração de Gráfico:\n",
+    "    Calcula a geometria do problema de catenária apoiada por cabo e plota o gráfico\n",
+    "    :param func: Função de resolução do problema de catenária\n",
+    "    :type f: func\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
     "    def do(L, st, xa, ya, w, theta_a, theta_b, fh_a, fh_b, N, prec):\n",
+    "        \"\"\"Função de Geração de Gráfico:\n",
+    "        Calcula a geometria do problema de catenária apoiada por cabo e plota o gráfico\n",
+    "        :param L: Comprimento do Cabo de apoio (m)\n",
+    "        :type L: float, int\n",
+    "        :param st: Comprimento total do riser (m)\n",
+    "        :type st: float, int\n",
+    "        :param xa, ya: Distância entre os apoios (m)\n",
+    "        :type xa, ya: float, int\n",
+    "        :param w: Peso por unidade de comprimento (N/m)\n",
+    "        :type w: float, int\n",
+    "        :param theta_a: Valor inferior para intervalo do ângulo entre a resultante e a vertical (°)\n",
+    "        :type theta_a: float, int\n",
+    "        :param theta_b:Valor superior para intervalo do ângulo entre a resultante e a vertical (°)\n",
+    "        :type theta_b: float, int\n",
+    "        :param fh_a: Valor inferior para intervalo da força horizontal no apoio (N)\n",
+    "        :type fh_a: float, int\n",
+    "        :param fh_b: Valor superior para intervalo da força horizontal no apoio (N)\n",
+    "        :type fh_b: float, int\n",
+    "        :param N: Número de amostras a serem geradas\n",
+    "        :type N: int \n",
+    "        :param prec: Precisão do Resultado,  defaults to 1e-4\n",
+    "        :type prec: float\n",
+    "        :return: None\n",
+    "    \"\"\"\n",
     "        # dados\n",
-    "        fh, theta, ft = func(L, st, xa, ya, w, theta_a, theta_b, fh_a, fh_b, int(N), prec)\n",
+    "        fh, theta, ft = func(L, st, xa, ya, w, theta_a, theta_b, fh_a, fh_b, N, prec)\n",
     "        xt = xa-L*np.sin(theta)\n",
     "        yc = ya-L*np.cos(theta)\n",
     "        a = fh/w\n",
@@ -682,7 +844,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e8ad9d6aeda472587eef2a154c6dda3",
+       "model_id": "30faffd2715141568564a93b6015e7d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -708,7 +870,7 @@
     "fh_b = FloatText(description='Força Horizontal Máxima (N):', value=2000, style=style, layout = box_layout)\n",
     "N = FloatText(description='Numero de Amostras:', value=10000, step=1000, style=style, layout = box_layout)\n",
     "prec = FloatText(description='Precisão:', value=1e-3, step=1e-3, style=style, layout = box_layout)\n",
-    "interactive(plot(catenaria_genetico), L=L, xa=xa, ya=ya, w=w, st=st, theta_a=theta_a, theta_b=theta_b, fh_a=fh_a, fh_b=fh_b, N=N, prec=prec)"
+    "interactive(plot2(catenaria_genetico), L=L, xa=xa, ya=ya, w=w, st=st, theta_a=theta_a, theta_b=theta_b, fh_a=fh_a, fh_b=fh_b, N=N, prec=prec)"
    ]
   }
  ],
@@ -740,10 +902,10 @@
    "title_sidebar": "Contents",
    "toc_cell": true,
    "toc_position": {
-    "height": "151.181px",
-    "left": "1155.02px",
-    "top": "52px",
-    "width": "239.861px"
+    "height": "151.172px",
+    "left": "52px",
+    "top": "85px",
+    "width": "212px"
    },
    "toc_section_display": true,
    "toc_window_display": true
